--- a/src/components/website/phone/phone.css
+++ b/src/components/website/phone/phone.css
@@ -27,6 +27,10 @@
 
 .phone-text-blocks {
     padding: 0 0 0 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 120px;
 }
 
 .phone-header-and-description {
