fix: ! move the Phone block right after the Map

--- a/src/components/website/phone/phone.css
+++ b/src/components/website/phone/phone.css
@@ -17,6 +17,7 @@
 }
 
 .phone-background {
+    margin-top: -240px;
     width: 1342px;
     height: 1327px;
     background-image: url(./Phone.png);
