--- a/src/components/website/phone/phone.css
+++ b/src/components/website/phone/phone.css
@@ -18,7 +18,8 @@
 
 .phone-background {
     margin-top: -240px;
-    width: 1342px;
+    min-width: 1342px;
+    width: 100%;
     height: 1327px;
     background-image: url(./Phone.png);
     background-size: contain;
