--- a/src/components/website/advantages/advantages.css
+++ b/src/components/website/advantages/advantages.css
@@ -3,3 +3,10 @@
     width: 100%;
     background-color: #141414;
 }
+
+.advantage-block-full {
+    height: 410px;
+    width: 1200px;
+    background-color: #CBEA5E;
+    border-radius: 50px;
+}
