--- a/src/components/website/map/map.css
+++ b/src/components/website/map/map.css
@@ -5,6 +5,10 @@
     background-size: auto;
     background-position: center;
     background-repeat: no-repeat;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .frame-column {
@@ -15,9 +19,11 @@
 }
 
 .frame-text {
+    width: 500px;
     font-size: 20px;
     font-weight: 500;
     line-height: 24px;
+    letter-spacing: 0em;
     text-align: center;
     color: #ffffff;
 }
