refactor: - move borderRadius CSS prop to a separate CSS style

--- a/src/components/website/advantages/advantages.css
+++ b/src/components/website/advantages/advantages.css
@@ -7,9 +7,12 @@
 .advantage-block-full {
     height: 410px;
     width: 1200px;
-    border-radius: 50px;
 
     display: flex;
+}
+
+.advantage-block-radius {
+    border-radius: 50px;
 }
 
 .advantage-block-text p {
