--- a/src/components/website/advantages/advantages.css
+++ b/src/components/website/advantages/advantages.css
@@ -14,6 +14,10 @@
 .advantage-half-block {
     width: 50%;
     height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .advantage-half-block-text {
