--- a/src/components/website/advantages/advantages.css
+++ b/src/components/website/advantages/advantages.css
@@ -1,9 +1,11 @@
+/* The container for the whole thing */
 .advantages-container {
     height: auto;
     width: 100%;
     background-color: #141414;
 }
 
+/* The container is split into blocks */
 .advantage-block {
     height: 410px;
     width: 1200px;
@@ -11,6 +13,7 @@
     display: flex;
 }
 
+/* Each block (even the full one is split into 2 internal containers */
 .advantage-half-block {
     width: 50%;
     height: 100%;
@@ -20,16 +23,16 @@
     align-items: center;
 }
 
-.advantage-half-block-text p {
-    font-size: 64px;
-    font-weight: 700;
-    line-height: 77px;
-    letter-spacing: 0em;
-    text-align: center;
-}
-
 .advantage-block-radius {
     border-radius: 50px;
+}
+
+/* Style for the <div> to have the 2 <p> inside */
+.advantage-block-text {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
 }
 
 .advantage-block-text p {
@@ -40,11 +43,13 @@
     text-align: left;
 }
 
-.advantage-block-text {
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    justify-content: center;
+/* The text in the split blocks shall be centered */
+.advantage-half-block-text p {
+    font-size: 64px;
+    font-weight: 700;
+    line-height: 77px;
+    letter-spacing: 0em;
+    text-align: center;
 }
 
 .advantage-block-text-header {
