feat: - add last advantage block

--- a/src/components/website/advantages/advantages.css
+++ b/src/components/website/advantages/advantages.css
@@ -49,3 +49,7 @@
 .advantage-text-header {
     opacity: 0.5;
 }
+
+.advantages-block-with-background {
+    background-image: url("./Bridge.png");
+}
