refactor: - split advantage-text-container & advantage-text CSS classes

--- a/src/components/website/advantages/advantages.css
+++ b/src/components/website/advantages/advantages.css
@@ -28,7 +28,7 @@
 }
 
 /* Style for the <div> to have the 2 <p> inside */
-.advantage-text {
+.advantage-text-containter {
     display: flex;
     flex-direction: column;
     align-items: left;
