--- a/src/components/website/footer/footer.css
+++ b/src/components/website/footer/footer.css
@@ -29,3 +29,14 @@
     color: #FFFFFF;
     opacity: 0.5;
 }
+
+div .footer-links {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 17px;
+    color: #FFFFFF;
+}
+
+.footer-first-link {
+    opacity: 0.5;
+}
