fix: ! fix reference to <p> in footer-links

--- a/src/components/website/footer/footer.css
+++ b/src/components/website/footer/footer.css
@@ -34,7 +34,7 @@
     opacity: 0.5;
 }
 
-div .footer-links {
+.footer-links p {
     font-size: 14px;
     font-weight: 700;
     line-height: 17px;
