fix: ! add padding around Advantages blocks

--- a/src/components/website/advantages/advantages.css
+++ b/src/components/website/advantages/advantages.css
@@ -4,6 +4,8 @@
     width: 100%;
     background-color: #141414;
 
+    padding: 105px 120px 62px 120p;
+
     display: flex;
     flex-direction: column;
     align-items: center;
