--- a/src/components/website/footer/footer.css
+++ b/src/components/website/footer/footer.css
@@ -1,5 +1,5 @@
-.footer-container {
-    width: 100%;
+.footer-outer-container {
+    width: 1400px;
     height: auto;
     margin: 32px 120px 120px 32px;
 
