--- a/src/components/website/footer/footer.css
+++ b/src/components/website/footer/footer.css
@@ -2,6 +2,10 @@
     width: 1400px;
     height: auto;
     margin: 32px 120px 120px 32px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer-inner-container {
