--- a/src/components/website/footer/footer.css
+++ b/src/components/website/footer/footer.css
@@ -1,13 +1,15 @@
 .footer-outer-container {
-    width: 1400px;
+    width: 100%;
     height: auto;
-    margin: 32px 120px 32px 120px;
+    padding: 32px 0 32px 0;
 
     display: flex;
     justify-content: center;
 }
 
 .footer-inner-container {
+    max-width: 1200px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
