chore: ! move all images to a dedicated folder

--- a/src/components/website/advantages/advantages.css
+++ b/src/components/website/advantages/advantages.css
@@ -58,5 +58,5 @@
 }
 
 .advantages-block-with-background {
-    background-image: url("./Bridge.png");
+    background-image: url("../../../assets/images/Bridge.png");
 }
