--- a/src/components/website/phone/phone.css
+++ b/src/components/website/phone/phone.css
@@ -21,7 +21,7 @@
     min-width: 1342px;
     width: 100%;
     height: 1327px;
-    background-image: url(./Phone.png);
+    background-image: url(../../../assets/images/Phone.png);
     background-size: contain;
     background-position: right;
     background-repeat: no-repeat;
