--- a/src/components/website/footer/footer.css
+++ b/src/components/website/footer/footer.css
@@ -15,6 +15,9 @@
 }
 
 .footer-brand {
+    max-width: 374px;
+    width: 100%;
+
     display: flex;
     flex-direction: column;
     justify-content: space-between;
