--- a/src/components/website/map/map.css
+++ b/src/components/website/map/map.css
@@ -25,7 +25,7 @@
     color: #ffffff;
 }
 
-.frame-column {
+.map-content-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,7 +34,7 @@
     transform: translateY(-28%);
 }
 
-.frame-text {
+.map-text {
     width: 500px;
     font-size: 20px;
     font-weight: 500;
