--- a/src/components/website/map/map.css
+++ b/src/components/website/map/map.css
@@ -43,3 +43,12 @@
     text-align: center;
     color: #ffffff;
 }
+
+.map-links {
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 24px;
+}
