--- a/src/components/website/login/login.css
+++ b/src/components/website/login/login.css
@@ -9,4 +9,21 @@
 
     width: 1440px;
     height: 1024px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login-window {
+    max-width: 690px;
+    max-height: 516px;
+
+    width: 100%;
+    height: 100%;
+
+    border-radius: 10px;
+    border: 1px solid #454545;
+    background: linear-gradient(0deg, rgba(30, 30, 30, 0.90) 0%, rgba(46, 46, 46, 0.90) 100%);
+    backdrop-filter: blur(10px);
 }
