--- a/src/components/website/login/login.css
+++ b/src/components/website/login/login.css
@@ -27,3 +27,44 @@
     background: linear-gradient(0deg, rgba(30, 30, 30, 0.90) 0%, rgba(46, 46, 46, 0.90) 100%);
     backdrop-filter: blur(10px);
 }
+
+.login-ellipses-container {
+    width: 100%;
+    height: 100%;
+
+    opacity: 0.4;
+    overflow: hidden;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.login-ellipse-left-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.login-ellipse-right-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.login-ellipse {
+    width: 335px;
+    height: 335px;
+    opacity: 0.6;
+    border-radius: 50%;
+    filter: blur(50px);
+}
+.login-ellipse-green {
+    transform: translate(-45%, -10%);
+    background: #72CC00;
+}
+
+.login-ellipse-blue {
+    transform: translate(60%, 30%);
+    background: #26FFF2;
+}
