--- a/src/components/website/login/login.css
+++ b/src/components/website/login/login.css
@@ -31,8 +31,13 @@
 }
 
 .login-ellipses-container {
+    max-width: inherit;
+    max-height: inherit;
+
     width: 100%;
     height: 100%;
+
+    position: absolute;
 
     opacity: 0.4;
     overflow: hidden;
