--- a/src/components/website/login/login.css
+++ b/src/components/website/login/login.css
@@ -75,3 +75,35 @@
     transform: translate(60%, 30%);
     background: #26FFF2;
 }
+
+.login-window-top-container {
+    max-width: 340px;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 16px;
+}
+
+.login-window-logo {
+    max-width: 46px;
+    max-height: 46px;
+    width: 100%;
+    height: 100%;
+}
+
+.login-window-brand {
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 39px;
+    color: #FFFFFF;
+}
+
+.login-window-description {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    color: #FFFFFF;
+}
