--- a/src/components/website/login/login.css
+++ b/src/components/website/login/login.css
@@ -107,3 +107,38 @@
     line-height: 20px;
     color: #FFFFFF;
 }
+
+.login-window-bottom-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 4px;
+}
+
+.login-window-button {
+    max-height: 52px;
+    max-width: 340px;
+
+    height: 52px;
+    width: 100%;
+    
+    border-radius: 10px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 22px;
+}
+
+.login-window-button-signin {
+    color: #000000;
+    background-color: #ACF709;   
+}
+
+.login-window-button-register {
+    color: #ACF709;
+    background-color: #000000;
+}
