--- a/src/components/website/login/login.css
+++ b/src/components/website/login/login.css
@@ -116,11 +116,8 @@
 }
 
 .login-window-button {
-    max-height: 52px;
-    max-width: 340px;
-
     height: 52px;
-    width: 100%;
+    width: 340px;
     
     border-radius: 10px;
 
