--- a/src/components/website/login/login.css
+++ b/src/components/website/login/login.css
@@ -1,16 +1,11 @@
 .login-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.login-background {
     background-image: url(../../../assets/images/GoogleMaps.png);
 
     width: 1440px;
     height: 1024px;
 
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
