--- a/src/components/website/login/login.css
+++ b/src/components/website/login/login.css
@@ -46,7 +46,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    gap: 8px;
+    gap: 20px;
 }
 
 .login-header-brand-logo {
@@ -59,6 +59,29 @@
     font-weight: 500;
     line-height: 19px;
     color: #FFFFFF;
+}
+
+.login-header-inner-block {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
+}
+
+.login-header-account-image {
+    height: 100%;
+    width: 100%;
+}
+
+.login-header-account-text {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 17px;
+
+    color: #FFFFFF;
+
+    text-decoration: underline;
 }
 
 .login-window {
