--- a/src/components/website/login/login.css
+++ b/src/components/website/login/login.css
@@ -25,7 +25,7 @@
     top: 0;
     left: 0;
 
-    margin: 20px 20px 0 20px;
+    padding: 20px 20px 0 20px;
 
     display: flex;
     flex-direction: row;
