--- a/src/components/website/login/login.css
+++ b/src/components/website/login/login.css
@@ -6,8 +6,10 @@
 
 .login-background {
     background-image: url(../../../assets/images/GoogleMaps.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 
-    height: 100vw;
+    height: 100vh;
 }
 
 .login-header {
