fix: add login-window-container CSS class to center the Login window

--- a/src/components/website/login/login.css
+++ b/src/components/website/login/login.css
@@ -74,6 +74,14 @@
     text-decoration: underline;
 }
 
+.login-window-container {
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .login-window {
     max-width: 690px;
     max-height: 516px;
