refactor: specify only the needed padding

--- a/src/components/website/phone/phone.css
+++ b/src/components/website/phone/phone.css
@@ -28,7 +28,7 @@
 }
 
 .phone-text-blocks {
-    padding: 0 0 0 120px;
+    padding-left: 120px;
     display: flex;
     flex-direction: column;
     justify-content: center;
