--- a/src/components/website/footer/footer.css
+++ b/src/components/website/footer/footer.css
@@ -42,23 +42,22 @@
         color: #FFFFFF;
     }
 
+    .footer-brand-opaque-text {
+        color: #FFFFFF;
+        opacity: 0.5;
+    }
+
     .footer-brand-bigger-text {
         font-family: 'Tektur';
         font-size: 16px;
         font-weight: 700;
         line-height: 23px;
-
-        color: #FFFFFF;
-        opacity: 0.5;
     }
 
     .footer-brand-smaller-text {
         font-size: 12px;
         font-weight: 500;
         line-height: 15px;
-
-        color: #FFFFFF;
-        opacity: 0.5;
     }
 }
 
