--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,3 +1,13 @@
 body {
     background-color: black;
 }
+
+.header-logo {
+    width: 32px;
+    height: 33px;
+}
+
+.header-logo-container {
+    margin: 32px 0 0 120px;
+    padding: 0;
+}
