refactor: - change type of imageContainerStyle from CSSProperties to string and move terminalImageContainerCSS to CSS file

--- a/src/components/website/advantages/advantages.css
+++ b/src/components/website/advantages/advantages.css
@@ -52,3 +52,10 @@
 .advantages-block-with-background {
     background-image: url("../../../assets/images/Bridge.png");
 }
+
+.advantage-block-terminal-image-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
