refactor: add explicitly the inner CSS class to .advantage-text

--- a/src/components/website/advantages/advantages.css
+++ b/src/components/website/advantages/advantages.css
@@ -34,11 +34,13 @@
     border-radius: 50px;
 }
 
-.advantage-text p {
-    font-size: 64px;
-    font-weight: 700;
-    line-height: 77px;
-    letter-spacing: 0em;
+.advantage-text {
+    p {
+        font-size: 64px;
+        font-weight: 700;
+        line-height: 77px;
+        letter-spacing: 0em;
+    }
 }
 
 .advantage-block-half-text-container {
