refactor: rename advantage-text to .advantage-block-text

--- a/src/components/website/advantages/advantages.css
+++ b/src/components/website/advantages/advantages.css
@@ -34,7 +34,7 @@
     border-radius: 50px;
 }
 
-.advantage-text {
+.advantage-block-text {
     p {
         font-size: 64px;
         font-weight: 700;
