refactor: rename advantages-block-with-background to advantages-block-map-background

--- a/src/components/website/advantages/advantages.css
+++ b/src/components/website/advantages/advantages.css
@@ -51,7 +51,7 @@
     max-width: 437px;
 }
 
-.advantages-block-with-background {
+.advantages-block-map {
     background-image: url("../../../assets/images/Bridge.png");
 }
 
