--- a/src/components/website/advantages/advantages.css
+++ b/src/components/website/advantages/advantages.css
@@ -66,7 +66,7 @@
 .advantage-block-map-shadows {
     position: absolute;
 
-    width: 1200px;
+    width: inherit;
     margin-top: 50px;
 
     display: flex;
