refactor: move footer-brand-name CSS class to an inner of footer-brand-logo

--- a/src/components/website/footer/footer.css
+++ b/src/components/website/footer/footer.css
@@ -31,15 +31,15 @@
         justify-content: flex-start;
         align-items: center;
         gap: 8px;
-    }
 
-    .footer-brand-name {
-        font-family: 'Tektur';
-        font-size: 64px;
-        font-weight: 700;
-        line-height: 23px;
+        p {
+            font-family: 'Tektur';
+            font-size: 64px;
+            font-weight: 700;
+            line-height: 23px;
 
-        color: #FFFFFF;
+            color: #FFFFFF;
+        }
     }
 
     .footer-brand-opaque-text {
