--- a/src/components/website/footer/footer.css
+++ b/src/components/website/footer/footer.css
@@ -33,7 +33,7 @@
         gap: 8px;
 
         p {
-            font-family: 'Tektur';
+            font-family: 'Tektur', sans-serif;
             font-size: 64px;
             font-weight: 700;
             line-height: 23px;
@@ -47,7 +47,7 @@
         opacity: 0.5;
 
         p:first-child {
-            font-family: 'Tektur';
+            font-family: 'Tektur', sans-serif;
             font-size: 16px;
             font-weight: 700;
             line-height: 23px;
