refactor: . rename LoginModal() top container CSS class to make it generic

--- a/src/components/website/login/login.css
+++ b/src/components/website/login/login.css
@@ -172,7 +172,7 @@
     height: 100%;
 }
 
-.login-modal-brand {
+.login-modal-header {
     font-size: 40px;
     font-weight: 500;
     line-height: 39px;
