--- a/src/components/website/login/login.css
+++ b/src/components/website/login/login.css
@@ -195,15 +195,13 @@
     gap: 16px;
 
     /* This container shall have only buttons */
-    div {
+    input {
         height: 52px;
         width: 340px;
 
         border-radius: 10px;
 
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+        text-align: center;
 
         font-size: 16px;
         font-weight: 700;
