--- a/src/components/website/login/login.css
+++ b/src/components/website/login/login.css
@@ -188,6 +188,56 @@
     color: #FFFFFF;
 }
 
+.login-modal-opaque-text {
+    opacity: 50%;
+}
+
+.login-modal-input-outer-container {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 16px;
+
+    .login-modal-input-help {
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 17px;
+        color: #FFFFFF;
+    }
+
+    .login-modal-input-inner-container {
+        height: 52px;
+        width: 340px;
+
+        background-color: #222222;
+
+        border: 2px solid #3A3A3A;
+        border-radius: 10px;
+
+        padding: 0 14px;
+
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 10px;
+
+        .login-modal-input-envelope-image {
+            width: 20px;
+            height: 16px;
+        }
+
+        .login-modal-input-text {
+            color: #FFFFFF;
+            font-size: 14px;
+            font-weight: 700;
+            line-height: 18px;
+        }
+    }
+}
+
 .login-modal-bottom-container {
     display: flex;
     flex-direction: column;
