--- a/src/components/website/login/login.css
+++ b/src/components/website/login/login.css
@@ -181,7 +181,9 @@
     color: #FFFFFF;
 }
 
-.login-modal-description {
+.login-modal-header-description {
+    text-align: center;
+
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
@@ -200,6 +202,15 @@
     justify-content: space-between;
     align-items: flex-start;
     gap: 16px;
+
+    .login-modal-input-description {
+        text-align: left;
+
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 20px;
+        color: #FFFFFF;
+    }
 
     .login-modal-input-help {
         font-size: 14px;
@@ -241,8 +252,35 @@
         border-color: #FF5572;
     }
 
+    .login-modal-correct-input {
+        color: #ACF709;
+    }
+
     .login-modal-wrong-input {
         color: #FF5572;
+    }
+
+    .login-modal-input-otp-container {
+        width: 340px;
+
+        display: flex;
+        align-content: space-between;
+        gap: 10px;
+
+        input {
+            height: 48px;
+            width: 48px;
+
+            border: 2px solid #3A3A3A;
+            border-radius: 10px;
+
+            font-size: 32px;
+            font-weight: 500;
+            line-height: 24px;
+            text-align: center;
+
+            color: #FFFFFF;
+        }
     }
 }
 
