--- a/src/components/website/phone/phone.css
+++ b/src/components/website/phone/phone.css
@@ -17,10 +17,9 @@
 }
 
 .phone-background {
-    margin-top: -240px;
     min-width: 1342px;
     width: 100%;
-    height: 1327px;
+    height: 1082px;
     background-image: url(../../../assets/images/Phone.png);
     background-size: contain;
     background-position: right;
@@ -28,11 +27,12 @@
 }
 
 .phone-text-blocks {
+    padding-top: 110px;
     padding-left: 120px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    gap: 120px;
+    justify-content: flex-start;
+    gap: 100px;
 }
 
 .phone-header-and-description {
