refactor: - use <ul> and <li> elements for link lists

--- a/src/components/website/footer/footer.css
+++ b/src/components/website/footer/footer.css
@@ -67,14 +67,14 @@
     justify-content: flex-start;
     gap: 16px;
 
-    p {
+    li {
         font-size: 14px;
         font-weight: 700;
         line-height: 17px;
         color: #FFFFFF;
     }
 
-    p:first-child {
+    li:first-child {
         opacity: 0.5;
     }
 }
