--- a/src/components/website/login/Login.scss
+++ b/src/components/website/login/Login.scss
@@ -17,6 +17,8 @@
 
     padding: 20px 20px 0 20px;
 
+    width: inherit;
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
