--- a/src/components/website/login/Ellipses/Ellipses.scss
+++ b/src/components/website/login/Ellipses/Ellipses.scss
@@ -1,6 +1,6 @@
 .login-ellipses-container {
-    max-width: inherit;
-    max-height: inherit;
+    max-width: 690px;
+    max-height: 516px;
 
     width: 100%;
     height: 100%;
