--- a/src/components/website/login/Login.scss
+++ b/src/components/website/login/Login.scss
@@ -34,7 +34,12 @@
 }
 
 .login-window-content-container {
+    max-width: 340px;
+
     height: 100%;
+    width: 100%;
+
+    margin: 0 auto;
 
     display: flex;
     flex-direction: column;
