--- a/src/components/website/login/LoginModal.scss
+++ b/src/components/website/login/LoginModal.scss
@@ -1,5 +1,4 @@
 .login-modal-input-container {
-  max-width: 340px;
   width: 100%;
 
   display: flex;
@@ -63,7 +62,7 @@
 
 .login-modal-input-box-container {
   height: 52px;
-  width: 340px;
+  width: 100%;
 
   background-color: #222222;
 
@@ -99,6 +98,8 @@
 }
 
 .login-modal-button-container {
+  width: 100%;
+
   padding-bottom: 32px;
 
   display: flex;
@@ -109,7 +110,7 @@
   /* This container shall have only buttons */
   input {
     height: 52px;
-    width: 340px;
+    width: inherit;
 
     border-radius: 10px;
 
