--- a/src/components/website/login/Login.scss
+++ b/src/components/website/login/Login.scss
@@ -43,6 +43,7 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
+    gap: 16px;
 }
