--- a/src/components/website/login/LoginModal.scss
+++ b/src/components/website/login/LoginModal.scss
@@ -132,3 +132,20 @@
     background-color: #000000;
   }
 }
+
+.login-modal-navigation-container {
+  width: 100%;
+
+  padding: 20px;
+
+  position: absolute;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  .login-modal-navigation-button {
+    width: 32px;
+    height: 32px;
+  }
+}
