--- a/src/components/website/login/LoginModal.scss
+++ b/src/components/website/login/LoginModal.scss
@@ -108,6 +108,19 @@
   justify-content: space-between;
   gap: 16px;
 
+  .login-modal-two-buttons-on-one-row {
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 11px;
+
+    p {
+      white-space: nowrap;
+    }
+  }
+
   /* This container shall have only buttons */
   input {
     height: 52px;
