feat: - implement password reset state

--- a/src/components/website/login/LoginModal.scss
+++ b/src/components/website/login/LoginModal.scss
@@ -50,6 +50,8 @@
 .login-modal-input-help {
   margin-right: auto;
 
+  text-align: left;
+
   font-size: 14px;
   font-weight: 500;
   line-height: 17px;
