--- a/src/components/website/login/Login.scss
+++ b/src/components/website/login/Login.scss
@@ -10,20 +10,17 @@
     height: 100vh;
 }
 
-.login-content-container {
-    height: 100%;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .login-window {
     max-width: 690px;
     max-height: 516px;
 
     width: 100%;
     height: 100%;
+
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 
     border-radius: 10px;
     border: 1px solid #454545;
