refactor: ! temporarily remove background image and rename CSS class to login-container

--- a/src/components/website/login/Login.scss
+++ b/src/components/website/login/Login.scss
@@ -1,12 +1,5 @@
-.login-background-container {
+.login-container {
     width: 1440px;
-
-    margin: 0 auto;
-
-    background-image: url(../../../assets/images/GoogleMaps.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-
     height: 100vh;
 }
 
