refactor: . run stylelint

--- a/src/components/website/advantages/Advantages.scss
+++ b/src/components/website/advantages/Advantages.scss
@@ -4,7 +4,7 @@
     width: 100%;
     background-color: #141414;
 
-    padding: 105px 120px 62px 120px;
+    padding: 105px 120px 62px;
 
     display: flex;
     flex-direction: column;
