--- a/src/components/website/login/Login.scss
+++ b/src/components/website/login/Login.scss
@@ -18,7 +18,7 @@
 
     border-radius: 10px;
     border: 1px solid #454545;
-    background: linear-gradient(0deg, rgba(30, 30, 30, 0.90) 0%, rgba(46, 46, 46, 0.90) 100%);
+    background: linear-gradient(0deg, rgb(30 30 30 / 90%) 0%, rgb(46 46 46 / 90%) 100%);
     backdrop-filter: blur(10px);
 
     text-align: center;
