--- a/src/components/website/map/Map.scss
+++ b/src/components/website/map/Map.scss
@@ -1,7 +1,7 @@
 .map-background {
     width: 100%;
     height: 710px;
-    background-image: url(../../../assets/images/Map.png);
+    background-image: url("../../../assets/images/Map.png");
     background-size: auto;
     background-position: center;
     background-repeat: no-repeat;
