--- a/src/components/website/footer/Footer.scss
+++ b/src/components/website/footer/Footer.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Tektur:wght@400..900&display=swap');
+@import 'https://fonts.googleapis.com/css2?family=Tektur:wght@400..900&display=swap';
 
 .footer-outer-container {
     width: 100%;
