refactor: ! do not render components over login-window

--- a/src/components/website/login/Login.scss
+++ b/src/components/website/login/Login.scss
@@ -16,6 +16,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
 
+    overflow: hidden;
     border-radius: 10px;
     border: 1px solid #454545;
     background: linear-gradient(0deg, rgb(30 30 30 / 90%) 0%, rgb(46 46 46 / 90%) 100%);
