--- a/src/components/website/login/NavigationButtons.scss
+++ b/src/components/website/login/NavigationButtons.scss
@@ -9,8 +9,16 @@
   flex-direction: row;
   justify-content: space-between;
 
-  .login-modal-navigation-button-image {
-    width: 32px;
-    height: 32px;
+  button {
+    min-width: 32px;
+    min-height: 32px;
+
+    overflow: hidden;
+    border-radius: 50%;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
