--- a/src/components/website/login/LoginModal.scss
+++ b/src/components/website/login/LoginModal.scss
@@ -148,6 +148,26 @@
   }
 }
 
+.login-modal-loader-container {
+  height: 100%;
+  width: 100%;
+
+  padding-top: 25%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 8px;
+}
+
+.login-modal-loader-text {
+  color: #FFFFFF;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+}
+
 .login-modal-loader {
   max-height: 24px;
   max-width: 24px;
