refactor: . rename login modal related classes

--- a/src/components/website/login/Login.scss
+++ b/src/components/website/login/Login.scss
@@ -4,7 +4,7 @@
     width: 100%;
 }
 
-.login-window {
+.login-modal-window {
     max-width: 690px;
     max-height: 516px;
 
@@ -25,7 +25,7 @@
     text-align: center;
 }
 
-.login-window-content-container {
+.login-modal-container {
     max-width: 340px;
 
     height: 100%;
