--- a/src/components/website/login/MapApp.scss
+++ b/src/components/website/login/MapApp.scss
@@ -1,10 +1,10 @@
-.login-container {
+.map-app-container {
     max-width: 1440px;
     height: 100vh;
     width: 100%;
 }
 
-.login-map-image {
+.map-app-map-image {
     height: 100%;
     width: 100%;
 
