--- a/src/components/website/mapApp/MapAppHeader.scss
+++ b/src/components/website/mapApp/MapAppHeader.scss
@@ -1,6 +1,8 @@
 .map-app-header {
     width: 100%;
 
+    padding-bottom: 20px;
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
