--- a/src/components/website/mapApp/MapApp.scss
+++ b/src/components/website/mapApp/MapApp.scss
@@ -1,9 +1,10 @@
 .map-app-container {
     max-width: 1440px;
-    height: 100vh;
     width: 100%;
 
     padding: 20px 20px 0;
+
+    overflow: scroll;
 }
 
 .map-app-map-image {
