--- a/src/components/website/login/LoginModalShadows/LoginModalShadows.scss
+++ b/src/components/website/login/LoginModalShadows/LoginModalShadows.scss
@@ -1,4 +1,4 @@
-.login-ellipses-container {
+.login-modal-shadows-container {
     max-width: 690px;
     max-height: 516px;
 
@@ -17,19 +17,19 @@
     flex-direction: row;
     justify-content: space-between;
 
-    .login-ellipse-left-container {
+    .login-modal-shadows-left-container {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
     }
 
-    .login-ellipse-right-container {
+    .login-modal-shadows-right-container {
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
     }
 
-    .login-ellipse {
+    .login-modal-shadow {
         width: 335px;
         height: 335px;
         opacity: 0.6;
@@ -37,12 +37,12 @@
         filter: blur(50px);
     }
 
-    .login-ellipse-green {
+    .login-modal-shadow-green {
         transform: translate(-45%, -10%);
         background: #72CC00;
     }
 
-    .login-ellipse-blue {
+    .login-modal-shadow-blue {
         transform: translate(60%, 30%);
         background: #26FFF2;
     }
