--- a/src/components/website/mapApp/MapApp.scss
+++ b/src/components/website/mapApp/MapApp.scss
@@ -28,28 +28,47 @@
     width: 100%;
     height: 100%;
 
+    position: relative;
+    overflow: hidden;
+
     background: linear-gradient(360deg, rgb(30 30 30 / 100%) 0%, rgb(46 46 46 / 100%) 100%);
     border-radius: 10px;
     border: 1px solid #454545;
 
-    .map-app-product-description-text {
-        margin: 25px 57px 0 16px;
-        padding-bottom: 16px;
+    .map-app-product-description-shadow {
+        width: 475px;
+        height: 475px;
 
-        color: white;
+        position: absolute;
+        transform: translate(-20%, 70%);
 
-        h1 {
-            font-size: 40px;
-            font-weight: 500;
-            line-height: 39px;
+        opacity: 0.5;
+        filter: blur(160px);
+        background-color: #ACF709;
+    }
 
+    .map-app-product-description-container {
+        position: relative;
+
+        .map-app-product-description-text {
+            margin: 25px 57px 0 16px;
             padding-bottom: 16px;
-        }
 
-        p {
-            font-size: 14px;
-            font-weight: 400;
-            line-height: 20px;
+            color: white;
+
+            h1 {
+                font-size: 40px;
+                font-weight: 500;
+                line-height: 39px;
+
+                padding-bottom: 16px;
+            }
+
+            p {
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 20px;
+            }
         }
     }
 }
