--- a/src/components/website/mapApp/MapAppHeader.scss
+++ b/src/components/website/mapApp/MapAppHeader.scss
@@ -36,12 +36,14 @@
         color: #FFFFFF;
     }
 
-    .map-app-header-inner-block {
+    .map-app-header-login-button {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
         gap: 8px;
+
+        padding-right: 12px;
     }
 
     .map-app-header-account-image {
