refactor: - new classes shall extend map-app-header-block

--- a/src/components/website/mapApp/MapAppHeader.scss
+++ b/src/components/website/mapApp/MapAppHeader.scss
@@ -24,7 +24,7 @@
         justify-content: flex-end;
     }
 
-    .map-app-header-block {
+    %map-app-header-block-placeholder {
         max-height: 46px;
 
         background-color: #000000;
@@ -38,6 +38,10 @@
         flex-direction: row;
         align-items: center;
         gap: 8px;
+    }
+
+    .map-app-header-block {
+        @extend %map-app-header-block-placeholder;
     }
 
     .map-app-header-brand-logo {
@@ -78,7 +82,9 @@
     }
 }
 
-.terminal-search-block {
+.terminal-search-header-block {
+    @extend %map-app-header-block-placeholder;
+
     max-width: 310px;
     width: 100%;
 }
@@ -91,6 +97,10 @@
     font-weight: 500;
     line-height: 16.94px;
     text-align: left;
+}
+
+.user-points-header-block {
+    @extend %map-app-header-block-placeholder;
 }
 
 .user-points {
