fix: ! expand input to the as wide as possible

--- a/src/components/website/mapApp/MapAppHeader.scss
+++ b/src/components/website/mapApp/MapAppHeader.scss
@@ -89,6 +89,8 @@
     width: 100%;
 
     .terminal-search-input {
+        width: 100%;
+
         color: #FFFFFF90;
 
         font-family: Inter, sans-serif;
