--- a/src/components/website/mapApp/MapApp.scss
+++ b/src/components/website/mapApp/MapApp.scss
@@ -8,16 +8,21 @@
     overflow: scroll;
 }
 
-.map-app-map-image {
-    height: 100%;
-    width: 100%;
+.map-app-map {
+    height: 100vh;
+    width: 100vw;
 
-    position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
 
-    object-fit: cover;
-
+    position: absolute;
     z-index: -1000;
+}
+
+.leaflet-layer,
+.leaflet-control-zoom-in,
+.leaflet-control-zoom-out,
+.leaflet-control-attribution {
+    filter: invert(85%) hue-rotate(180deg) brightness(95%) contrast(90%);
 }
