--- a/src/components/website/mapApp/ProductDescription.scss
+++ b/src/components/website/mapApp/ProductDescription.scss
@@ -1,11 +1,8 @@
 .product-description-window {
-  max-width: 335px;
-  max-height: 576px;
+  width: 335px;
+  height: 545px;
 
-  width: 100%;
-  height: 100%;
-
-  position: relative;
+  position: absolute;
   overflow: hidden;
 
   background: linear-gradient(360deg, rgb(30 30 30 / 100%) 0%, rgb(46 46 46 / 100%) 100%);
@@ -28,6 +25,8 @@
     position: relative;
 
     .product-description-text {
+      width: 250px;
+
       margin: 25px 57px 0 16px;
       padding-bottom: 16px;
 
