--- a/src/components/website/mapApp/MapAppHeader.scss
+++ b/src/components/website/mapApp/MapAppHeader.scss
@@ -23,11 +23,11 @@
     }
 
     .map-app-header-block {
-        max-height: 46px;
+        height: 46px;
 
         background-color: #000000;
 
-        padding: 11px 20px;
+        padding: 0 20px;
 
         border: 1px solid #454545;
         border-radius: 10px;
