--- a/src/components/website/login/LoginModal.scss
+++ b/src/components/website/login/LoginModal.scss
@@ -7,8 +7,8 @@
 
   position: absolute;
   left: 50%;
-  top: 50%;
   transform: translate(-50%, -50%);
+  animation-fill-mode: forwards;
 
   overflow: hidden;
   border-radius: 10px;
@@ -182,5 +182,35 @@
   .login-modal-button-green-on-black {
     color: #ACF709;
     background-color: #000000;
+  }
+}
+
+.login-modal-window-appears {
+  animation-name: keyframe-login-modal-slide-in;
+  animation-duration: 1s;
+}
+
+@keyframes keyframe-login-modal-slide-in {
+  from {
+    top: -50%
+  }
+
+  to {
+    top: 50%;
+  }
+}
+
+.login-modal-window-disappears {
+  animation-name: keyframe-login-modal-slide-out;
+  animation-duration: 1s;
+}
+
+@keyframes keyframe-login-modal-slide-out {
+  from {
+    top: 50%
+  }
+
+  to {
+    top: 150%;
   }
 }
