--- a/src/components/website/mapApp/MapApp.scss
+++ b/src/components/website/mapApp/MapApp.scss
@@ -6,3 +6,62 @@
 
     overflow: scroll;
 }
+
+.map-app-location-loader-container {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+  padding: 20px;
+
+  border-radius: 10px;
+  border: 1px solid #454545;
+  background: linear-gradient(0deg, rgb(30 30 30 / 90%) 0%, rgb(46 46 46 / 90%) 100%);
+  backdrop-filter: blur(10px);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+
+  p {
+    color: white;
+
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 39px;
+
+    text-align: center;
+    white-space: nowrap;
+  }
+
+  .map-app-location-loader {
+    height: 36px;
+    width: 36px;
+
+    background: conic-gradient(transparent, #ACF709);
+    border-radius: 50%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    animation: load 2s linear infinite;
+  }
+
+  .map-app-location-loader::before {
+    width: 75%;
+    height: 75%;
+    position: absolute;
+    border-radius: 50%;
+    background-color: #222222;
+    content: '';
+  }
+
+  @keyframes load {
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+}
