--- a/src/components/website/login/LoginModal.scss
+++ b/src/components/website/login/LoginModal.scss
@@ -7,8 +7,11 @@
 
   position: absolute;
   left: 50%;
+  top: 60%;
   transform: translate(-50%, -50%);
-  animation-fill-mode: forwards;
+
+  transition-duration: 0.5s;
+  opacity: 0;
 
   overflow: hidden;
   border-radius: 10px;
@@ -186,31 +189,11 @@
 }
 
 .login-modal-window-appears {
-  animation-name: keyframe-login-modal-slide-in;
-  animation-duration: 1s;
-}
-
-@keyframes keyframe-login-modal-slide-in {
-  from {
-    top: -50%
-  }
-
-  to {
-    top: 50%;
-  }
+  top: 50%;
+  opacity: 1;
 }
 
 .login-modal-window-disappears {
-  animation-name: keyframe-login-modal-slide-out;
-  animation-duration: 1s;
-}
-
-@keyframes keyframe-login-modal-slide-out {
-  from {
-    top: 50%
-  }
-
-  to {
-    top: 150%;
-  }
+  top: 60%;
+  opacity: 0;
 }
