--- a/src/components/website/mainPage/Phone.scss
+++ b/src/components/website/mainPage/Phone.scss
@@ -1,21 +1,3 @@
-.header {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 64px;
-    line-height: 77px;
-    text-align: left;
-    color: #FFFFFF;
-    margin-bottom: 16px;
-}
-
-.description {
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 24px;
-    text-align: left;
-    color: rgb(255 255 255 / 60%);
-}
-
 .phone-text-blocks {
     width: 1342px;
     height: 1082px;
@@ -32,7 +14,25 @@
     gap: 100px;
 }
 
-.phone-header-and-description {
+.phone-text-block {
     width: 400px;
     height: 140px;
+
+    p {
+        font-style: normal;
+        font-weight: 700;
+        font-size: 64px;
+        line-height: 77px;
+        text-align: left;
+        color: #FFFFFF;
+        margin-bottom: 16px;
+    }
+
+    span {
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 24px;
+        text-align: left;
+        color: rgb(255 255 255 / 60%);
+    }
 }
