--- a/src/components/website/mainPage/Hero.scss
+++ b/src/components/website/mainPage/Hero.scss
@@ -1,8 +1,8 @@
-.map-background {
+.hero-container {
     display: flex;
     justify-content: center;
 
-    .map-background-video {
+    .hero-background-video {
         width: 100%;
 
         z-index: -1;
@@ -35,21 +35,21 @@
 
 }
 
-.map-brand {
+.hero-brand {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 16px;
 }
 
-.map-brand-text {
+.hero-brand-text {
     font-size: 64px;
     font-weight: 700;
     line-height: 77px;
     color: #ffffff;
 }
 
-.map-content-container {
+.hero-content-container {
     width: 584px;
 
     position: absolute;
@@ -61,7 +61,7 @@
     gap: 20px;
 }
 
-.map-text {
+.hero-text {
     font-size: 20px;
     font-weight: 500;
     line-height: 24px;
@@ -69,7 +69,7 @@
     color: #ffffff;
 }
 
-.map-links {
+.hero-links {
     width: 100%;
 
     display: flex;
