--- a/src/components/website/mainPage/Hero.scss
+++ b/src/components/website/mainPage/Hero.scss
@@ -32,48 +32,46 @@
         }
     }
 
+    .hero-content-container {
+        width: 584px;
 
-}
+        position: absolute;
+        top: 220px;
 
-.hero-brand {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 16px;
-}
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
 
-.hero-brand-text {
-    font-size: 64px;
-    font-weight: 700;
-    line-height: 77px;
-    color: #ffffff;
-}
+        .hero-brand {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 16px;
 
-.hero-content-container {
-    width: 584px;
+            p {
+                font-size: 64px;
+                font-weight: 700;
+                line-height: 77px;
+                color: #ffffff;
+            }
+        }
 
-    position: absolute;
-    top: 220px;
+        .hero-text {
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 24px;
+            text-align: center;
+            color: #ffffff;
+        }
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-}
+        .hero-links {
+            width: 100%;
 
-.hero-text {
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 24px;
-    text-align: center;
-    color: #ffffff;
-}
-
-.hero-links {
-    width: 100%;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 24px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            gap: 24px;
+        }
+    }
 }
