refactor: ! use margin instead of flexbox

--- a/src/components/website/mainPage/Footer.scss
+++ b/src/components/website/mainPage/Footer.scss
@@ -5,12 +5,12 @@
     height: auto;
     padding: 32px 0;
 
-    display: flex;
-    justify-content: center;
-
     .footer-inner-container {
         max-width: 1200px;
         width: 100%;
+
+        margin: 0 auto;
+
         display: flex;
         justify-content: space-between;
 
