--- a/src/components/website/login/LoginModalHeader.scss
+++ b/src/components/website/login/LoginModalHeader.scss
@@ -1,6 +1,4 @@
 .login-modal-header-container {
-  width: 100%;
-
   padding-top: 46px;
 
   display: flex;
@@ -10,10 +8,8 @@
   gap: 16px;
 
   .login-modal-header-logo {
-    max-width: 46px;
-    max-height: 46px;
-    width: 100%;
-    height: 100%;
+    width: 46px;
+    height: 46px;
   }
 
   .login-modal-header {
